samples/_failures_safe/1761400517_ba520e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_361e9ca2.c: In function ‘main’:
./samples/SAFE/__tmp_361e9ca2.c:135:31: error: ‘INT’ undeclared (first use in this function)
  135 |                     if (sum > INT
      |                               ^~~
./samples/SAFE/__tmp_361e9ca2.c:135:31: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_361e9ca2.c:135:34: error: expected ‘)’ at end of input
  135 |                     if (sum > INT
      |                        ~         ^
      |                                  )
./samples/SAFE/__tmp_361e9ca2.c:135:21: error: expected declaration or statement at end of input
  135 |                     if (sum > INT
      |                     ^~
./samples/SAFE/__tmp_361e9ca2.c:135:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_361e9ca2.c:135:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_361e9ca2.c:135:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_361e9ca2.c:135:21: error: expected declaration or statement at end of input
